[gd_scene load_steps=8 format=3 uid="uid://cmyg2g0gima31"]

[ext_resource type="Script" path="res://scripts/statistics_screen.gd" id="1_h0gp4"]
[ext_resource type="FontFile" uid="uid://bceo6mdndisde" path="res://assets/fonts/Roboto-Bold.ttf" id="2_l5hmj"]
[ext_resource type="Script" path="res://scenes/draw_control.gd" id="3_sk2q2"]
[ext_resource type="FontFile" uid="uid://dvxsg8fyqxya6" path="res://assets/fonts/Roboto-Medium.ttf" id="4_bnrhr"]
[ext_resource type="Script" path="res://scenes/chart_general.gd" id="5_a35i3"]
[ext_resource type="Script" path="res://scenes/chart_mode_ia.gd" id="5_v08g4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_47krs"]
bg_color = Color(0.6, 0.6, 0.6, 0.145098)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="StatisticsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h0gp4")

[node name="EscapeLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 1747.0
offset_top = 1042.0
offset_right = 1902.0
offset_bottom = 1065.0
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 19
text = "Esc para salir"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 32.0
offset_right = 383.0
offset_bottom = 161.0

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 24
text = "Perfil del Jugador"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer2"]
layout_mode = 2

[node name="IDHBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="IDLabel" type="Label" parent="VBoxContainer2/IDHBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "ID del Jugador"

[node name="IDPlayer" type="Label" parent="VBoxContainer2/IDHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "123"
horizontal_alignment = 1

[node name="UsernameHBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="UsernameLabel" type="Label" parent="VBoxContainer2/UsernameHBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "Nombre de usuario"

[node name="UsernamePlayer" type="Label" parent="VBoxContainer2/UsernameHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "Carlos"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DateHBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="DateLabel" type="Label" parent="VBoxContainer2/DateHBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "Fecha de creación"

[node name="DatePlayer" type="Label" parent="VBoxContainer2/DateHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "03/12/1978"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 223.0
offset_right = 474.0
offset_bottom = 870.0

[node name="HSeparator8" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 24
text = "Estadísticas generales"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="UsernameHBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TotalGamesLabel" type="Label" parent="VBoxContainer/UsernameHBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "Partidas iniciadas
"

[node name="TotalGamesPlayerLabel" type="Label" parent="VBoxContainer/UsernameHBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="DateHBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AbandonedGamesLabel" type="Label" parent="VBoxContainer/DateHBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "Partidas abandonadas"

[node name="AbandonedGamesPlayerLabel" type="Label" parent="VBoxContainer/DateHBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="DateHBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CompletedGamesLabel" type="Label" parent="VBoxContainer/DateHBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "Partidas completadas   "

[node name="CompletedGamesPlayerLabel" type="Label" parent="VBoxContainer/DateHBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="DateHBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AverageDurationLabel" type="Label" parent="VBoxContainer/DateHBoxContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "Tiempo promedio de las partidas"

[node name="AverageDurationPlayerLabel" type="Label" parent="VBoxContainer/DateHBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="DateHBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AverageIntuitionLabel" type="Label" parent="VBoxContainer/DateHBoxContainer5"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "Promedio partidas modo Intuición"

[node name="AverageIntuitionPlayerLabel" type="Label" parent="VBoxContainer/DateHBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 2
vertical_alignment = 1

[node name="DateHBoxContainer8" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AverageStrategyLabel" type="Label" parent="VBoxContainer/DateHBoxContainer8"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "Promedio partidas modo Estrategia"

[node name="AverageStrategyPlayerLabel" type="Label" parent="VBoxContainer/DateHBoxContainer8"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="DateHBoxContainer16" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AverageIAAlumnoLabel" type="Label" parent="VBoxContainer/DateHBoxContainer16"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "Promedio Dificultad Alumno"

[node name="AverageIaAlumnoPlayerLabel" type="Label" parent="VBoxContainer/DateHBoxContainer16"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="DateHBoxContainer17" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AverageIAProfesorLabel" type="Label" parent="VBoxContainer/DateHBoxContainer17"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "Promedio Dificultad Profesor"

[node name="AverageIAProfesorPlayerLabel" type="Label" parent="VBoxContainer/DateHBoxContainer17"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="DateHBoxContainer18" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AverageIAPsicologoLabel" type="Label" parent="VBoxContainer/DateHBoxContainer18"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "Promedio Dificultad Psicólogo"

[node name="AverageIAPsicologoPlayerLabel" type="Label" parent="VBoxContainer/DateHBoxContainer18"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="HSeparator5" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 24
text = "Estadísticas jugador"
horizontal_alignment = 1

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="DateHBoxContainer6" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="WinLabel" type="Label" parent="VBoxContainer/DateHBoxContainer6"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "Partidas ganadas"

[node name="WinPlayerLabel" type="Label" parent="VBoxContainer/DateHBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="DateHBoxContainer9" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="LossesLabel" type="Label" parent="VBoxContainer/DateHBoxContainer9"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "Partidas perdidas"

[node name="LosserPlayerLabel" type="Label" parent="VBoxContainer/DateHBoxContainer9"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="DateHBoxContainer19" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="DrawLabel" type="Label" parent="VBoxContainer/DateHBoxContainer19"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "Partidas empatadas"

[node name="DrawPlayerLabel" type="Label" parent="VBoxContainer/DateHBoxContainer19"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="DateHBoxContainer10" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="AbandonsLabel" type="Label" parent="VBoxContainer/DateHBoxContainer10"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "Partidas abandonadas"

[node name="AbandonsPlayerLabel" type="Label" parent="VBoxContainer/DateHBoxContainer10"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="DateHBoxContainer11" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AverageCombosLabel" type="Label" parent="VBoxContainer/DateHBoxContainer11"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "Promedio de combos por partida"

[node name="AverageCombosPlayerLabel" type="Label" parent="VBoxContainer/DateHBoxContainer11"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="DateHBoxContainer7" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MaxCombosLabel" type="Label" parent="VBoxContainer/DateHBoxContainer7"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "Máximo de combos en una partida"

[node name="MaxCombosPlayerLabel" type="Label" parent="VBoxContainer/DateHBoxContainer7"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="DateHBoxContainer12" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AverageTurnLabel" type="Label" parent="VBoxContainer/DateHBoxContainer12"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "Tiempo promedio de los turnos"

[node name="AverageTurnPlayerLabel" type="Label" parent="VBoxContainer/DateHBoxContainer12"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="HSeparator6" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 24
text = "Estadísticas tiradas"
horizontal_alignment = 1

[node name="HSeparator7" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="DateHBoxContainer13" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TotalTiradasLabel" type="Label" parent="VBoxContainer/DateHBoxContainer13"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "Total tiradas"

[node name="TotalTiradasPlayerLabel" type="Label" parent="VBoxContainer/DateHBoxContainer13"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="DateHBoxContainer20" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TotalEstrellasLabel" type="Label" parent="VBoxContainer/DateHBoxContainer20"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "Total de puntos Empatía ganados
"

[node name="TotalEstrellasPlayerLabel" type="Label" parent="VBoxContainer/DateHBoxContainer20"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="DateHBoxContainer21" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PromedioEstrellasLabel" type="Label" parent="VBoxContainer/DateHBoxContainer21"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "Promedio de puntos Empatía ganados"

[node name="PromedioEstrellasPlayerLabel" type="Label" parent="VBoxContainer/DateHBoxContainer21"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="DateHBoxContainer14" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="PlayerWinLabel" type="Label" parent="VBoxContainer/DateHBoxContainer14"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "Tiradas ganadas por el jugador"

[node name="PlayerWinTiradasLabel" type="Label" parent="VBoxContainer/DateHBoxContainer14"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="DateHBoxContainer15" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="RatioPlayerWinLabel" type="Label" parent="VBoxContainer/DateHBoxContainer15"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "Ratio de tiradas ganadas por el jugador"

[node name="RatioPlayerWinTiradasLabel" type="Label" parent="VBoxContainer/DateHBoxContainer15"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1324.0
offset_top = 224.0
offset_right = 1738.0
offset_bottom = 495.0

[node name="HSeparator6" type="HSeparator" parent="VBoxContainer3"]
layout_mode = 2

[node name="Label4" type="Label" parent="VBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 24
text = "Estadísticas tokens"
horizontal_alignment = 1

[node name="HSeparator7" type="HSeparator" parent="VBoxContainer3"]
layout_mode = 2

[node name="DateHBoxContainer2" type="HBoxContainer" parent="VBoxContainer3"]
layout_mode = 2

[node name="TokenAnalysisLabel" type="Label" parent="VBoxContainer3/DateHBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "Tokens de todas las partidas"

[node name="TokenAnalysisPlayerLabel" type="Label" parent="VBoxContainer3/DateHBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="DateHBoxContainer3" type="HBoxContainer" parent="VBoxContainer3"]
layout_mode = 2

[node name="TokenPsicologicoLabel" type="Label" parent="VBoxContainer3/DateHBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "          Token Psicológico"

[node name="TokenPsicologicoPlayerLabel" type="Label" parent="VBoxContainer3/DateHBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="DateHBoxContainer4" type="HBoxContainer" parent="VBoxContainer3"]
layout_mode = 2

[node name="TokenVerbalLabel" type="Label" parent="VBoxContainer3/DateHBoxContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "          Token Verbal"

[node name="TokenVerbalPlayerLabel" type="Label" parent="VBoxContainer3/DateHBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="DateHBoxContainer5" type="HBoxContainer" parent="VBoxContainer3"]
layout_mode = 2

[node name="TokenCiberbullyingLabel" type="Label" parent="VBoxContainer3/DateHBoxContainer5"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "          Token Ciberbullying"

[node name="TokenCiberbullyingPlayerLabel" type="Label" parent="VBoxContainer3/DateHBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="DateHBoxContainer6" type="HBoxContainer" parent="VBoxContainer3"]
layout_mode = 2

[node name="TokenExclusionLabel" type="Label" parent="VBoxContainer3/DateHBoxContainer6"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "          Token Exclusión Social"

[node name="TokenExclusionPlayerLabel" type="Label" parent="VBoxContainer3/DateHBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="DateHBoxContainer7" type="HBoxContainer" parent="VBoxContainer3"]
layout_mode = 2

[node name="TokenFisicoLabel" type="Label" parent="VBoxContainer3/DateHBoxContainer7"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "          Token Físico"

[node name="TokenFisicoPlayerLabel" type="Label" parent="VBoxContainer3/DateHBoxContainer7"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="DateHBoxContainer8" type="HBoxContainer" parent="VBoxContainer3"]
layout_mode = 2

[node name="TokenSexualLabel" type="Label" parent="VBoxContainer3/DateHBoxContainer8"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
text = "          Token Sexual"

[node name="TokenSexualPlayerLabel" type="Label" parent="VBoxContainer3/DateHBoxContainer8"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_l5hmj")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChartTokens" type="Control" parent="."]
anchors_preset = 0
offset_left = 1231.0
offset_top = 503.0
offset_right = 1841.0
offset_bottom = 847.0
script = ExtResource("3_sk2q2")

[node name="Panel" type="Panel" parent="ChartTokens"]
layout_mode = 1
offset_right = 610.0
offset_bottom = 344.0
theme_override_styles/panel = SubResource("StyleBoxFlat_47krs")

[node name="Label" type="Label" parent="ChartTokens"]
layout_mode = 0
offset_top = 9.0
offset_right = 606.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("4_bnrhr")
theme_override_font_sizes/font_size = 25
text = "ESTADÍSTICAS TOKENS"
horizontal_alignment = 1

[node name="ChartModeIa" type="Control" parent="."]
anchors_preset = 0
offset_left = 529.0
offset_top = 574.0
offset_right = 1139.0
offset_bottom = 918.0
script = ExtResource("5_v08g4")

[node name="Panel" type="Panel" parent="ChartModeIa"]
layout_mode = 1
offset_right = 610.0
offset_bottom = 344.0
theme_override_styles/panel = SubResource("StyleBoxFlat_47krs")

[node name="Label" type="Label" parent="ChartModeIa"]
layout_mode = 0
offset_top = 9.0
offset_right = 606.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("4_bnrhr")
theme_override_font_sizes/font_size = 25
text = "ESTADÍSTICAS DIFICULTAD Y MODOS"
horizontal_alignment = 1

[node name="ChartGeneral" type="Control" parent="."]
anchors_preset = 0
offset_left = 529.0
offset_top = 217.0
offset_right = 1139.0
offset_bottom = 508.0
script = ExtResource("5_a35i3")

[node name="Panel" type="Panel" parent="ChartGeneral"]
layout_mode = 0
offset_right = 610.0
offset_bottom = 291.0
theme_override_styles/panel = SubResource("StyleBoxFlat_47krs")

[node name="Label" type="Label" parent="ChartGeneral"]
layout_mode = 0
offset_top = 9.0
offset_right = 606.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("4_bnrhr")
theme_override_font_sizes/font_size = 25
text = "ESTADÍSTICAS PARTIDAS"
horizontal_alignment = 1

[node name="FeedbackLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 426.0
offset_top = 39.0
offset_right = 1880.0
offset_bottom = 197.0
theme_override_fonts/font = ExtResource("4_bnrhr")
theme_override_font_sizes/font_size = 15
